--- a/app/src/main/res/layout/patient_report.xml
+++ b/app/src/main/res/layout/patient_report.xml
@@ -219,7 +219,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
 
             <Space
                 android:layout_width="match_parent"
