--- a/app/src/main/res/layout/fragment_gad7.xml
+++ b/app/src/main/res/layout/fragment_gad7.xml
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingStart="30dp"
+            android:paddingStart="10dp"
             android:paddingEnd="10dp">
 
 
@@ -79,7 +79,7 @@
                     android:fontFamily="@font/montserrat"
                     android:paddingStart="1dp"
                     android:paddingEnd="1dp"
-                    android:text="@string/not_at_nall_sure"
+                    android:text="@string/not_at_all"
                     android:textAlignment="center"
                     android:textColor="@color/colorAccent"
                     android:textSize="12sp" />
@@ -141,6 +141,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:paddingStart="10dp"
                     android:orientation="horizontal">
 
                     <RadioButton
@@ -191,6 +192,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:paddingStart="10dp"
+
                     android:orientation="horizontal">
 
                     <RadioButton
@@ -240,6 +243,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:paddingStart="10dp"
+
                     android:orientation="horizontal">
 
                     <RadioButton
@@ -289,6 +294,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:paddingStart="10dp"
+
                     android:orientation="horizontal">
 
                     <RadioButton
@@ -339,6 +346,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:paddingStart="10dp"
+
                     android:orientation="horizontal">
 
                     <RadioButton
@@ -389,6 +398,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:paddingStart="10dp"
+
                     android:orientation="horizontal">
 
                     <RadioButton
@@ -439,6 +450,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:paddingStart="10dp"
                     android:orientation="horizontal">
 
                     <RadioButton
