--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,6 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="30dp"
         android:padding="20dp">
 
         <TextView
@@ -155,7 +156,7 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
+<!--
     <View
         android:id="@+id/divider3"
         android:layout_width="330dp"
@@ -182,6 +183,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="retrieve"/>
+        android:text="retrieve"/>-->
 
 </LinearLayout>
