--- a/app/src/main/res/layout/activity_edit_patient_text_draft_page.xml
+++ b/app/src/main/res/layout/activity_edit_patient_text_draft_page.xml
@@ -48,7 +48,8 @@
                 android:layout_margin="20dp"
                 android:ems="10"
                 android:gravity="start|top"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:textSize="20sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
