--- a/app/src/main/res/layout/voice_draft_row.xml
+++ b/app/src/main/res/layout/voice_draft_row.xml
@@ -2,8 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
+
     android:background="#FFFFFF">
 
     <RelativeLayout
@@ -13,10 +14,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_margin="10dp"
+
             android:layout_weight="2"
             android:orientation="horizontal">
 
