--- a/app/src/main/res/layout/activity_add_medicine_page.xml
+++ b/app/src/main/res/layout/activity_add_medicine_page.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -53,12 +52,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
         android:background="@drawable/custom_edit_text"
         android:ems="10"
         android:fontFamily="@font/montserrat"
         android:inputType="textPersonName"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,10 +160,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:fontFamily="@font/montserrat"
-        android:textSize="15dp"
         android:background="@drawable/custom_edit_text"
+        android:fontFamily="@font/montserrat"
         android:text="Set Time"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cloIcon"
         app:layout_constraintTop_toBottomOf="@+id/TimeTV" />
@@ -202,15 +201,88 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/custom_edit_text"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
         android:hint="SET DOSE"
         android:inputType="phone"
-        android:gravity="center"
-        android:fontFamily="@font/montserrat"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cloIcon"
         app:layout_constraintTop_toBottomOf="@+id/DoseTV" />
 
+
+    <TextView
+        android:id="@+id/RepeatView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/MedicineDose"
+        android:layout_marginEnd="7dp"
+        android:text="Repeat"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/repeatInterval"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/pillIcon"
+        app:layout_constraintTop_toBottomOf="@+id/pillIcon" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/RepeatView"
+        android:layout_marginTop="14dp"
+        android:text="Every"
+        app:layout_constraintStart_toStartOf="@+id/RepeatView"
+        app:layout_constraintTop_toTopOf="@+id/repeatInterval" />
+
+    <EditText
+        android:id="@+id/repeatInterval"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="24dp"
+        android:ems="10"
+        android:inputType="number"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/repeatType"
+        app:layout_constraintStart_toEndOf="@+id/textView2" />
+
+    <Spinner
+        android:id="@+id/repeatType"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/RepeatView"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="36dp"
+        android:ems="10"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/repeatNO"
+        app:layout_constraintStart_toEndOf="@+id/repeatInterval" />
+
+    <EditText
+        android:id="@+id/repeatNO"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="24dp"
+        android:ems="10"
+        android:inputType="number"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="64dp"
+        android:text="times"
+        app:layout_constraintStart_toEndOf="@+id/repeatNO"
+        app:layout_constraintTop_toBottomOf="@+id/MedicineDose" />
 
     <Button
         android:id="@+id/button"
