--- a/app/src/main/res/layout/activity_add_medicine_page.xml
+++ b/app/src/main/res/layout/activity_add_medicine_page.xml
@@ -82,7 +82,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Course Duration"
+        android:text="Starting from day"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +92,7 @@
         android:id="@+id/MFromDays"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/custom_edit_text"
         android:elevation="0dp"
@@ -102,7 +102,7 @@
         app:layout_constraintStart_toEndOf="@+id/calIcon"
         app:layout_constraintTop_toBottomOf="@+id/DateTV" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/dash"
         android:layout_width="27dp"
         android:layout_height="wrap_content"
@@ -111,9 +111,9 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/MTillDays"
         app:layout_constraintStart_toEndOf="@+id/MFromDays"
-        app:layout_constraintTop_toBottomOf="@+id/DateTV" />
+        app:layout_constraintTop_toBottomOf="@+id/DateTV" />-->
 
-    <Button
+    <!--<Button
         android:id="@+id/MTillDays"
         android:layout_width="100dp"
         android:layout_height="40dp"
@@ -125,22 +125,22 @@
         android:text="End"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DateTV" />
+        app:layout_constraintTop_toBottomOf="@+id/DateTV" />-->
 
 
     <TextView
         android:id="@+id/TimeTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/MTillDays"
+        android:layout_below="@id/MFromDays"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Time"
+        android:text="Time of first reminder"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MTillDays" />
+        app:layout_constraintTop_toBottomOf="@+id/MFromDays" />
 
 
     <ImageView
@@ -172,7 +172,7 @@
         android:id="@+id/DoseTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/MTillDays"
+        android:layout_below="@id/MFromDays"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
@@ -241,7 +241,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="number"
         android:text=""
@@ -256,7 +256,7 @@
         android:layout_below="@id/RepeatView"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="40dp"
         android:ems="10"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toStartOf="@+id/repeatNO"
@@ -267,7 +267,7 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="number"
         android:text=""
@@ -279,16 +279,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="14dp"
         android:text="times"
         app:layout_constraintStart_toEndOf="@+id/repeatNO"
-        app:layout_constraintTop_toBottomOf="@+id/MedicineDose" />
+        app:layout_constraintTop_toTopOf="@+id/repeatInterval" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="250dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/main_button"
         android:fontFamily="@font/montserrat"
         android:padding="3dp"
