--- a/app/src/main/res/layout/activity_patient_medicine_detail_page.xml
+++ b/app/src/main/res/layout/activity_patient_medicine_detail_page.xml
@@ -140,7 +140,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Time"
+        android:text="Time (from first reminder)"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
